# autoortho

./: .gitignore  Makefile  README.md  autoortho.py  autoortho.spec  autoortho_fuse.spec  buildreqs.sh  buildreqs_lin.sh  buildreqs_osx.sh  conda_autoortho.yml  getortho.py  installer.cfg  installer.nsi  mkdocs.yml  pyproject.toml  requirements-build.in  requirements-build.txt  requirements-win-test.txt  requirements-win.in  requirements-win.txt  requirements.in  requirements.txt  run.bat  similar.html  versions.json  xp_udp.py
.github/: test.yml
.github/DISCUSSION_TEMPLATE/: help  q-a.yml  q_a.md
.github/workflows/: build-gh-pages.yml  build.yml  build_release.yml  jekyll-gh-pages.yml  nightly.yml  release.yml  stale.yml  test.yml  unstable_build.yml
0.4.4/: 404.html  index.html
0.5.1-3/: 404.html  index.html
0.7.0/: 404.html  index.html
0.7.1/: 404.html  index.html
0.7.2/: index.html
autoortho/: __main__.py  aoconfig.py  aostats.py  autoortho-winfspy.py  autoortho.py  autoortho_fuse.py  autoortho_winfsp.py  autoortho_winfsp.py-record  build-reqs.txt  config_ui.py  dig_stats.py  downloader.py  flighttrack.py  getortho.py  hashes.py  locustfile.py  ops_stream.txt  perftest.py  profile_pydds.py  pydds.py  read_dds_header.py  replay_ops.py  test_aoconfig.py  test_aoimage.py  test_autoortho.py  test_downloader.py  test_getortho.py  test_pydds.py  test_winfsp.py  version.py  winfsp_shim.py  winsetup.py  xp_udp.py
docs/: config.md  details.md  faq.md  index.md  info.md  scenery.md
latest/: 404.html  index.html
unstable/: 404.html  index.html
(+58 files in other folders)
