[tool.poetry]
name = "autoortho4xplane"
version = "0.7.3"
description = "AutoOrtho project for X-plane, the project is a fork ."
authors = []
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
eventlet = "0.33.3"
flask = "3.0.3"
flask-socketio = "5.3.4"
geocoder = "1.38.1"
packaging = "23.1"
psutil = "5.9.2"
pysimplegui = "5.*"
pytest = "7.4.0"
refuse = "0.0.4"
requests = "2.31.0"

[tool.poetry.dev-dependencies]
pytest = "7.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

